2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved seahorse to 2.1-fifth-toe.

2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libgtcpsocket to 2.1-extras.

2003-01-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: vte has been branched. Reflect
	this.

2003-01-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gftp to 2.1-extras.

2003-01-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched. Reflect
	this.

2003-01-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed xchat entry. xchat
	translations are now managed by the Translation Project.

2003-01-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gthumb has been branched. Reflect
	this.

2003-01-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gimp-print entry. Gnucash
	translations are now managed by the Translation Project.

2003-01-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-applets has been branched. Reflect
	this.

2003-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-desktop-themes has been merged
	into gnome-themes. Remove gnome-desktop-themes.

2003-01-24  Carlos Perelló Marín <carlos@gnome-db.org>

	* translation-status.xml: Renamed xpdf to gpdf.

2003-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Seahorse has been branched. Reflect this.

2003-01-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched. Reflect
	this.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added camorama to 2.1-fifth-toe.

2003-01-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: glib and gnome-games have
	(silently) been branched. Reflect this.

2003-01-21  Christian Rose  <menthos@menthos.com>
