@@ -161,7 +161,7 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.1-fifth-toe">
+    <version release="gnome-2.1-extras">
       <component name="anjuta2" dir="anjuta2">
         <podir dir="po"/>
         <potname name="anjuta2.pot"/>
@@ -199,7 +199,7 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.1-fifth-toe">
+    <version release="gnome-2.1-extras">
       <component name="atomix" dir="atomix">
         <podir dir="po"/>
         <potname name="atomix.pot"/>
@@ -541,7 +541,7 @@
     </version>
   </module>
   <module name="epiphany">
-    <version release="gnome-2.1-fifth-toe">
+    <version release="gnome-2.1-extras">
       <component name="epiphany" dir="epiphany">
 	<podir dir="po"/>
 	<potname name="epiphany-2.0.pot"/>
@@ -612,7 +612,7 @@
     </version>
   </module>
   <module name="fontilus">
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="fontilus" dir="fontilus">
 	<podir dir="po"/>
 	<potname name="fontilus.pot"/>
@@ -679,7 +679,7 @@
 	<download/>
       </component>
     </version>
-    <version release="gnome-2.1-fifth-toe">
+    <version release="gnome-2.1-extras">
       <component name="gal" dir="gal">
 	<podir dir="po"/>
 	<potname name="gal-\${GAL_API_VERSION}.pot"/>
@@ -750,7 +750,7 @@
     </version>
   </module>
   <module name="gcm">
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gcm" dir="gcm">
 	<podir dir="po"/>
 	<potname name="gcm.pot"/>
@@ -772,7 +772,7 @@
     </version>
   </module>
   <module name="gcompris">
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gcompris" dir="gcompris">
 	<podir dir="po"/>
 	<potname name="gcompris.pot"/>
@@ -1087,8 +1087,6 @@
         <regenerate/>
         <download/>
       </component>
-    </version>
-    <version release="gnome-2.1-fifth-toe">
       <component name="gimp" dir="gimp">
         <podir dir="po"/>
         <potname name="gimp14.pot"/>
@@ -2006,7 +2004,7 @@
 	<download/>
       </component>
     </version>
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gnomeradio" dir="gnomeradio">
 	<podir dir="po"/>
 	<potname name="gnomeradio.pot"/>
@@ -2117,10 +2115,21 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gok" dir="gok">
         <podir dir="po"/>
         <potname name="gok.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
+  <module name="gpaint">
+    <version release="gnome-2.1-fifth-toe">
+      <component name="gpaint" dir="gpaint">
+        <podir dir="po"/>
+        <potname name="gpaint.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -2179,7 +2188,7 @@
     </version>
   </module>
   <module name="gswitchit">
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gswitchit" dir="gswitchit">
 	<podir dir="po"/>
 	<potname name="gswitchit.pot"/>
@@ -2190,7 +2199,7 @@
     </version>
   </module>
   <module name="gtetrinet">
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="gtetrinet" dir="gtetrinet">
 	<podir dir="po"/>
 	<potname name="gtetrinet.pot"/>
@@ -2257,7 +2266,7 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.1-fifth-toe">
+    <version release="gnome-2.1-extras">
       <component name="gtkhtml" dir="gtkhtml">
         <podir dir="po"/>
         <potname name="gtkhtml.pot"/>
@@ -2339,6 +2348,17 @@
       <component name="gturing" dir="gturing">
 	<podir dir="po"/>
 	<potname name="gturing-2.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
+  <module name="gucharmap">
+    <version release="gnome-2.1-fifth-toe">
+      <component name="gucharmap" dir="gucharmap">
+	<podir dir="po"/>
+	<potname name="gucharmap.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
@@ -2610,7 +2630,7 @@
 	<download/>
       </component>
     </version>
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="libmrproject" dir="libmrproject">
 	<podir dir="po"/>
 	<potname name="libmrproject.pot"/>
@@ -2710,7 +2730,7 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="memprof" dir="memprof">
         <podir dir="po"/>
         <potname name="memprof.pot"/>
@@ -2722,6 +2742,15 @@
   </module>
   <module name="mergeant">
     <version release="gnome-2.0-fifth-toe">
+      <component name="mergeant" dir="mergeant">
+	<podir dir="po"/>
+	<potname name="mergeant.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+    <version release="gnome-2.1-fifth-toe">
       <component name="mergeant" dir="mergeant">
 	<podir dir="po"/>
 	<potname name="mergeant.pot"/>
@@ -2810,7 +2839,7 @@
 	<download/>
       </component>
     </version>
-    <version release="gnome-2.1-extras">
+    <version release="gnome-2.1-fifth-toe">
       <component name="mrproject" dir="mrproject">
 	<podir dir="po"/>
 	<potname name="mrproject.pot"/>
