@@ -1,3 +1,8 @@
+2003-02-02  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Massive changes; tried to correct the
+	modules used for 2.1 Fifth Toe by using the Fifth Toe web site.
+
 2003-01-30  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Moved seahorse to 2.1-fifth-toe.
